--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/icon_fyz_icon.ico">
+  <meta name="description" content="Lance Santana is an individual with high energy and a charismatic personality, seeking a position as an ambassador for the School of Business.">
+  <meta name="author" content="862295983">
 
-  <title>John Doe - Business Administration</title>
+  <title>Lance Santana - Pre-Business</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Lance Santana</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/headshot.png" alt="Headshot">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,28 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Lance Santana
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Pre - Business 📚</div>
+        <p class="lead mb-4">An individual with high energy and a charismatic personality, currently attending UC Riverside for Pre-Business; to eventually obtain a master's in Business Administration. Offering strong leadership skills, exceptional communication skills, high attention to detail, and a strong ambition to improve the community at UC Riverside.
+                            I have refined general skills such as teamwork, leadership, professionalism, and communication through my past volunteer and work experience. I have been a patrol leader in boy scouts leading eight to twelve scouts, which has helped me work with planning, leadership, and problem-solving skills. In a more professional setting, I have worked as a Business Development Associate at an insurance agency, assisting in advertisement, customer service, and employee training in a professional setting. Other volunteer work includes Reading Partners as a reading tutor and Marengo Elementary as a Teacher Assistant, has helped me further my interpersonal skills while working with children. Outside of volunteer work as an individual, I have competed in robotics competitions with STEM classes such as graphic design, web design, and computer science, providing notable experience working with technology and design. Giving back to a community that supports me and seeing the change that results because of it makes me feel a sense of pride, accomplishment, and appreciation. 
+        <br><br>
 
-        Enter bio here<br><br>
+        During my college career, I have joined several organizations to help bring change to campus and to be involved in my community. PBL Future Business Leaders of America is one organization on campus that I have participated in since the start of my time at UCR. PBL has helped me obtain my Career Success certificate and further develop soft skills in a professional setting. Other organizations, such as R’Shorts, have given me the opportunity to gain experience in the film industry connecting me with positions in the school play and a short film. Experience in smaller local productions is helping me learn more about the industry while I do contract work as a grip in Los Angeles. Some projects I have worked on include; several commercials for Lagavulin Whiskey and the TV show surfside girls. This being my first year as a college student, I decided to join several organizations to help me diversify my portfolio. Over the next three years on campus, I plan to deepen my relationship with these organizations and take on new volunteer opportunities as they come over the year.<br><br>
 
-        Enter bio here
+        As a student progressing in my college career, I am looking forward to any new opportunities that will develop my professional process while further developing my community. Throughout the rest of my time as a college student, I plan on continuing my education into graduate school for a master's in Business Administration. With an MBA and minors in computer science, I plan on pursuing a career working as a project manager at a technology company. Hopefully, with future internships, I will be able to pursue my education while developing myself professionally in this field.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.linkedin.com/in/lance-santana/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/LanceSantana">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.instagram.com/lancefoxss/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:lancefoxss@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +94,50 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Movie Picture Grip</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Dunshire Productions</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Build and maintain all equipment that supports cameras<br> 
+              • Testing rigging to ensure saftey and reliability <br>
+              • Experience with equipment, rigging, lighting, poduction<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">October 2021 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Tutoring</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Self Starter</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Tutoring four high school students<br>
+              • Homework and study support<br>
+              • Leadership and training skills<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 6th 2019 -  Present
+</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Jack DeZells Insurance</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Internship</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Trained incoming interns<br>
+            • Cold calls and customer assistance<br>
+            • Assisted in advertisement content to help promote company products<br>
+            • Project management, employee training, customer outreach, advertizement<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">June 2019 - August 2019</span>
           </div>
         </div>
 
@@ -152,33 +156,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachalors in Business Administration - Information Systems</div>
+            <div>Currently enrolled as a pre-business student</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2021 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Career Success Certificate</div>
+            <div>Completion of a ix week career development program</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">January 2021</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div class="subheading mb-3">PBL Future Business Leaders of America</div>
+            <div>University Associated Club</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">January 2022 - Present</span>
           </div>
         </div>
 
@@ -191,7 +195,14 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/img1.png" width="500px">
+            <img src="img/img2.png" width="500px"><div>
+            <img src="img/img3.png" width="500px">
+            <img src="img/img4.png" width="500px"><div>
+            <img src="img/img5.png" width="500px">
+            <img src="img/img6.peg" width="500px"><div>
+              
+            </div>
         </center>
       </div>
     </section>
@@ -199,7 +210,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Lance Santana</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
